# terminal-froggy

./: .prettierrc  README.md  package-lock.json  package.json  prettier.config.cjs  tailwind.config.cjs
api/: Cargo.toml  README.md
api/src/: main.rs
src/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/pages/: _app.tsx  index.tsx
src/pages/api/trpc/: [trpc].ts
src/server/: trpc.ts
src/server/routers/: _app.ts
src/styles/: globals.css
src/utils/: trpc.ts
